# RainbowList

./: .gitignore  README.md  rainbowList  rainbowList.ipynb  rainbowList.py  rainbowList_noY.py
rainbow-list-pkg/: README.md  pyproject.toml
rainbow-list-pkg/src/rainbowlist/: __init__.py  main.py  weak.py
rainbow-list-pkg/tests/: test0.py
rainbow_list/: Cargo.toml
rainbow_list/src/: main.rs
